Añade hero-bg.mp4 usando Git LFS

--- a/services.html
+++ b/services.html
@@ -42,7 +42,6 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Ultra Deep Tech</h1>
       </a>
@@ -52,7 +51,7 @@
           <li class="dropdown"><a href="about.html"><span>About Us</span>
             <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Company History</a></li>
+              <li><a href="#">AI and Data Engineering Consulting</a></li>
               <li><a href="#">Leadership Team</a></li>
               <li><a href="#">Values and Ethics</a></li>
               <li><a href="#">Corporate Social Responsibility (CSR)</a></li>
