--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>calle falsa 123, Buenos Aires, CP 1678</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -129,7 +129,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <p>+54 9 11 5992 9083</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -137,7 +137,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>contact@ultradeep.tech</p>
               </div>
             </div><!-- End Info Item -->
 
