--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>contact@ultradeep.tech</p>
+                <p>contact@ultradeeptech.com</p>
               </div>
             </div><!-- End Info Item -->
 
