--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
       <video autoplay loop muted playsinline>
-        <source src="./assets/img/hero-bg.mp4" type="video/mp4">
+        <source src="./assets/img/brain-bg.mp4" type="video/mp4">
       </video>
       <div class="container">
         <div class="row">
