--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <p>Incorporating intelligent automated solutions to help new businesses be more valuable.</p>
             </blockquote>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-              <a href="#about" class="btn-get-started">Get Started</a>
+              <a href="#why-us" class="btn-get-started">Get Started</a>
             </div>
           </div>
         </div>
@@ -229,7 +229,7 @@
             <div>
               <h4 class="title">Interpretability</h4>
               <p class="description">Simplify and understand your AI model with techniques for bias analysis, feature generation, and simple mathematical formulas.</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="/service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -240,7 +240,7 @@
               <h4 class="title">Anonymization</h4>
               <p class="description">Protect data and model privacy and security with homomorphic encryption, safeguarding user and company information.
               </p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -249,7 +249,7 @@
             <div>
               <h4 class="title">Compression</h4>
               <p class="description">Optimize model performance with advanced quantization and pruning techniques, reducing size and complexity without sacrificing accuracy.              </p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -258,7 +258,7 @@
             <div>
               <h4 class="title">Benchmarking</h4>
               <p class="description">Evaluate and improve your AI system with specialized benchmarks, safety metrics, and performance evaluations under various conditions.              </p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -267,7 +267,7 @@
             <div>
               <h4 class="title">Algorithmic Protection              </h4>
               <p class="description">Control and protect AI usage with rejection sampling, algorithmic moderation, and internal testing to meet regulatory standards.              </p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -276,7 +276,7 @@
             <div>
               <h4 class="title">GenAI Safety              </h4>
               <p class="description">Maintain data and model security with updated repositories, data leak detection, and internal monitoring to prevent threats.</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -285,7 +285,7 @@
             <div>
               <h4 class="title">Evolving Threat Management              </h4>
               <p class="description">Manage emerging threats with a specialized team in AI and cybersecurity, ensuring continuous protection for your system.              </p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
           
@@ -307,7 +307,7 @@
             <div class="text-center">
               <h3>Ready to Transform Your AI Capabilities?</h3>
               <p>Contact us today to learn more about how our advanced AI solutions can help your business achieve new heights of performance, security, and innovation. Don't miss out on the opportunity to stay ahead in the rapidly evolving world of AI.</p>
-              <a class="cta-btn" href="#">Write Us</a>
+              <a class="cta-btn" href="/contact.html">Write Us</a>
             </div>
           </div>
         </div>
@@ -333,7 +333,7 @@
                     <h4 class="title">AI and Data Engineering Consulting
                     </h4>
                     <p class="description">Consulting in AI and Data Engineering to optimize processes, improve decision-making, and enhance technological innovation for companies..</p>
-                    <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                    <a href="/service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
                   </div>
                 </div>
                 <!-- End Service Item -->
@@ -346,7 +346,7 @@
                     <p class="description">Personalized solutions for medium, big companies, and Fortune 500, tailored to their specific needs to achieve business success.
                     </p>
 
-                    <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                    <a href="/service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
                   </div>
                 </div><!-- End Service Item -->
                       <div class="col-lg-4 position-relative" data-aos="zoom-out" data-aos-delay="200">
