--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
           <li class="dropdown"><a href="about.html"><span>About Us</span>
             <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">AI and Data Engineering Consulting</a></li>
+              <li><a href="#">Company History</a></li>
               <li><a href="#">Leadership Team</a></li>
               <li><a href="#">Values and Ethics</a></li>
               <li><a href="#">Corporate Social Responsibility (CSR)</a></li>
