--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div>
               <h4 class="title">Interpretability</h4>
               <p class="description">Simplify and understand your AI model with techniques for bias analysis, feature generation, and simple mathematical formulas.</p>
-              <a href="/service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -240,7 +240,7 @@
               <h4 class="title">Anonymization</h4>
               <p class="description">Protect data and model privacy and security with homomorphic encryption, safeguarding user and company information.
               </p>
-              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -249,7 +249,7 @@
             <div>
               <h4 class="title">Compression</h4>
               <p class="description">Optimize model performance with advanced quantization and pruning techniques, reducing size and complexity without sacrificing accuracy.              </p>
-              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -258,7 +258,7 @@
             <div>
               <h4 class="title">Benchmarking</h4>
               <p class="description">Evaluate and improve your AI system with specialized benchmarks, safety metrics, and performance evaluations under various conditions.              </p>
-              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -267,7 +267,7 @@
             <div>
               <h4 class="title">Algorithmic Protection              </h4>
               <p class="description">Control and protect AI usage with rejection sampling, algorithmic moderation, and internal testing to meet regulatory standards.              </p>
-              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -276,7 +276,7 @@
             <div>
               <h4 class="title">GenAI Safety              </h4>
               <p class="description">Maintain data and model security with updated repositories, data leak detection, and internal monitoring to prevent threats.</p>
-              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -285,7 +285,7 @@
             <div>
               <h4 class="title">Evolving Threat Management              </h4>
               <p class="description">Manage emerging threats with a specialized team in AI and cybersecurity, ensuring continuous protection for your system.              </p>
-              <a href="/productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
           
