--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <div class="text-center">
               <h3>Ready to Transform Your AI Capabilities?</h3>
               <p>Contact us today to learn more about how our advanced AI solutions can help your business achieve new heights of performance, security, and innovation. Don't miss out on the opportunity to stay ahead in the rapidly evolving world of AI.</p>
-              <a class="cta-btn" href="/contact.html">Write Us</a>
+              <a class="cta-btn" href="contact.html">Write Us</a>
             </div>
           </div>
         </div>
