--- a/about.html
+++ b/about.html
@@ -178,12 +178,15 @@
     </section><!-- /Corporate Social Responsibility Section -->
     
     <div class="container">
-      <h1 class="mt-5 mb-4 text-center">Marcas que Confían en Nosotros</h1>
+      <h2 class="mt-5 mb-4 text-center brands ">Brands that trust us</h2>
+      <p class="justify-content-center text-center">Meet the visionary leaders guiding Ultra Deep Tech.</p>
+
       <div class="clients-container">
-        <img src="logo1.png" alt="clients 1" class="clients">
-        <img src="logo2.png" alt="Logclientso 2" class="clients">
-        <img src="logo3.png" alt="clients 3" class="clients">
-        <img src="logo4.png" alt="clients 4" class="clients">
+        <img src="/assets/img/motorola solutions.jpg" alt="Motorola Solutions" class="clients ">
+        <img src="/assets/img/Piere.svg" alt="Piere" class="clients">
+        <img src="/assets/img/wiselayer.png" alt="wiselayer" class="clients">
+        <img src="/assets/img/ailert.png" alt="Ailert" class="clients">
+        <img src="/assets/img/the fitting room.png" alt="The fitting room" class="clients">
         <!-- Agrega más logos según sea necesario -->
       </div>
     <!-- Team Section -->
