--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="row g-0">
 
           <div class="col-xl-5 img-bg" data-aos="fade-up" data-aos-delay="100">
-            <img src="./assets/img/inteligencia call to action12.jpg" alt="">
+            <img src="./assets/img/inteligencia call to action12.png" alt="">
           </div>
 
           <div class="col-xl-7 slides position-relative" data-aos="fade-up" data-aos-delay="200">
@@ -420,8 +420,8 @@
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
-            <p>Calle falsa 123</p>
-            <p>Buenos Aires, CP 1678</p>
+            <p>Corrientes 800</p>
+            <p>Ciudad Autónoma de Buenos Aires, CP1008</p>
             <p>Argentina</p>
             <p class="mt-4"><strong>Phone:</strong> <span>+54 9 11-5992-9083</span></p>
             <p><strong>Email:</strong> <span>contact@ultradeeptech.com</span></p>
