--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-6">
-            <h1 data-aos="fade-up">AI Development Company</h1>
+            <h1 data-aos="fade-up " id="typewriter-title"></h1>
             <blockquote data-aos="fade-up" data-aos-delay="100">
               <p>Incorporating intelligent automated solutions to help new businesses be more valuable.</p>
             </blockquote>
@@ -457,6 +457,7 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/script.js"></script>
 
 </body>
 
