--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-
 </head>
 
 <body class="index-page">
+
+
+  <div class="lines">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
@@ -107,7 +113,7 @@
       </video>
       <div class="container">
         <div class="row">
-          <div class="col-xl-6">
+          <div class="col-xl-7">
             <h1 data-aos="fade-up " id="typewriter-title"></h1>
             <blockquote data-aos="fade-up" data-aos-delay="100">
               <p id="typewriter-drescription">Incorporating intelligent automated solutions to help new businesses be more valuable.</p>
