--- a/about.html
+++ b/about.html
@@ -182,11 +182,11 @@
       <p class="justify-content-center text-center">Meet the visionary leaders guiding Ultra Deep Tech.</p>
 
       <div class="clients-container">
-        <img src="/assets/img/motorola solutions.jpg" alt="Motorola Solutions" class="clients ">
-        <img src="/assets/img/Piere.svg" alt="Piere" class="clients">
-        <img src="/assets/img/wiselayer.png" alt="wiselayer" class="clients">
-        <img src="/assets/img/ailert.png" alt="Ailert" class="clients">
-        <img src="/assets/img/the fitting room.png" alt="The fitting room" class="clients">
+        <img src="assets/img/Piere.svg" alt="Piere" class="clients">
+        <img src="assets/img/motorola solutions.jpg" alt="Motorola Solutions" class="clients ">
+        <img src="assets/img/wiselayer.png" alt="wiselayer" class="clients">
+        <img src="assets/img/ailert.png" alt="Ailert" class="clients">
+        <img src="assets/img/the fitting room.png" alt="The fitting room" class="clients">
         <!-- Agrega más logos según sea necesario -->
       </div>
     <!-- Team Section -->
