--- a/productsdetails.html
+++ b/productsdetails.html
@@ -15,7 +15,7 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,12 +53,12 @@
           </li>
           <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Interpretability</a></li>
-              <li><a href="#">Anonymization</a></li>
-              <li><a href="#">Compression</a></li>
-              <li><a href="#">Benchmarking</a></li>
-              <li><a href="#">GenAI Safety</a></li>
-              <li><a href="#">Evolving Threat Management</a></li>
+              <li><a href="#" data-service="service-1">Interpretability</a></li>
+              <li><a href="#" data-service="service-2">Anonymization</a></li>
+              <li><a href="#" data-service="service-3">Compression</a></li>
+              <li><a href="#" data-service="service-4">Benchmarking</a></li>
+              <li><a href="#" data-service="service-5">GenAI Safety</a></li>
+              <li><a href="#" data-service="service-6">Evolving Threat Management</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -121,15 +121,14 @@
             <div class="service-box">
               <h4>Products & Solutions</h4>
               <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Interpretability</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Anonymization</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Compression</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Benchmarking</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>GenAI Safety</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Evolving Threat Management</span></a>
+                <a href="#" data-service="service-1"><i class="bi bi-arrow-right-circle"></i><span>Interpretability</span></a>
+                <a href="#" data-service="service-2"><i class="bi bi-arrow-right-circle"></i><span>Anonymization</span></a>
+                <a href="#" data-service="service-3"><i class="bi bi-arrow-right-circle"></i><span>Compression</span></a>
+                <a href="#" data-service="service-4"><i class="bi bi-arrow-right-circle"></i><span>Benchmarking</span></a>
+                <a href="#" data-service="service-5"><i class="bi bi-arrow-right-circle"></i><span>GenAI Safety</span></a>
+                <a href="#" data-service="service-6"><i class="bi bi-arrow-right-circle"></i><span>Evolving Threat Management</span></a>
               </div>
             </div><!-- End Services List -->
-
  
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
@@ -141,22 +140,16 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+            <img src="assets/img/services/interpretability.jpg" id="service-img" alt="" class="img-fluid services-img">
+            <div id="service-content">
+              <h3>Interpretability Service</h3>
+              <p>Our interpretability services help you understand the decision-making process of your AI models. We provide insights into model behavior, ensuring transparency and trust in AI-driven outcomes.</p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>Understand AI model decisions.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Enhance model transparency.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Build trust with stakeholders.</span></li>
+              </ul>
+            </div>
           </div>
 
         </div>
@@ -166,6 +159,9 @@
     </section><!-- /Service Details Section -->
 
   </main>
+
+  <footer id="footer" class="footer">
+
 
   <footer id="footer" class="footer">
 
