--- a/service-details.html
+++ b/service-details.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Ultra Deep Tech</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-  <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Ultra Deep Tech</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
-  
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  
-    <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  
-    <!-- Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  </head>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
+
+</head>
 
 <body class="service-details-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-  
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Ultra Deep Tech</h1>
       </a>
-  
+
       <nav id="navmenu" class="navmenu">
         <ul>
           <li class="dropdown"><a href="about.html"><span>About Us</span>
-            <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Company History</a></li>
               <li><a href="#">Leadership Team</a></li>
@@ -70,7 +68,7 @@
               <li><a href="#">Service Packages and Pricing</a></li>
             </ul>
           </li>
-  
+
           <li class="dropdown"><a href="services.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Current Job Openings</a></li>
@@ -80,7 +78,7 @@
               <li><a href="#">Employee Testimonials</a></li>
             </ul>
           </li>
-  
+
           <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Office Locations</a></li>
@@ -90,9 +88,8 @@
           </li>
         </ul>
       </nav>
-  
+
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-  
     </div>
   </header>
 
@@ -119,17 +116,13 @@
         <div class="row gy-5">
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-
             <div class="service-box">
               <h4>Services List</h4>
               <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle">AI and Data Engineering Consulting</i><span></span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle">Personalized Solutions for Medium, Big Companies, and Fortune 500</i><span></span></a>
-           
+                <a href="#" id="service-1" class="active"><i class="bi bi-arrow-right-circle"></i> AI and Data Engineering Consulting<span></span></a>
+                <a href="#" id="service-2"><i class="bi bi-arrow-right-circle"></i> Personalized Solutions for Medium, Big Companies, and Fortune 500<span></span></a>
               </div>
             </div><!-- End Services List -->
-
-
 
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
@@ -137,38 +130,31 @@
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+54 9 11 5992 9083</span></p>
               <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@ultradeeptech.com">contact@ultradeeptech.com</a></p>
             </div>
-
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img" id="service-img">
+            <div id="service-content">
+              <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+              <p>
+                Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              </p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              </ul>
+              <p>
+                Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
+              </p>
+            </div>
           </div>
-
         </div>
-
       </div>
-
     </section><!-- /Service Details Section -->
-
   </main>
 
   <footer id="footer" class="footer">
-
     <div class="footer-top">
       <div class="container">
         <div class="row gy-4">
@@ -177,7 +163,7 @@
               <span class="sitename">Ultra Deep Tech</span>
             </a>
             <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
-              .</p>
+            </p>
             <div class="social-links d-flex mt-4">
               <a href=""><i class="bi bi-twitter-x"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
@@ -217,7 +203,6 @@
             <p class="mt-4"><strong>Phone:</strong> <span>+54 9 11-5992-9083</span></p>
             <p><strong>Email:</strong> <span>contact@ultradeeptech.com</span></p>
           </div>
-
         </div>
       </div>
     </div>
@@ -228,7 +213,6 @@
         Designed by <a href="">Maximiliano Acri</a>
       </div>
     </div>
-
   </footer>
 
   <!-- Scroll Top -->
@@ -249,6 +233,59 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
-</body>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // Información de los servicios
+      const services = {
+        "service-1": {
+          "img": "assets/img/service1.jpg",
+          "title": "AI and Data Engineering Consulting",
+          "content": `
+            <p>Ofrecemos consultoría en ingeniería de datos y IA para ayudar a las empresas a transformar sus datos en información valiosa y tomar decisiones basadas en datos.</p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>Desarrollo de modelos predictivos y de aprendizaje automático.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Optimización de procesos de datos.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Implementación de soluciones de inteligencia artificial.</span></li>
+            </ul>
+          `
+        },
+        "service-2": {
+          "img": "assets/img/service2.jpg",
+          "title": "Personalized Solutions for Medium, Big Companies, and Fortune 500",
+          "content": `
+            <p>Nuestras soluciones personalizadas están diseñadas para satisfacer las necesidades específicas de empresas medianas, grandes y Fortune 500, brindando resultados excepcionales.</p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>Desarrollo de estrategias personalizadas de transformación digital.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Integración de tecnologías avanzadas para optimizar operaciones.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Soporte continuo y mantenimiento de soluciones.</span></li>
+            </ul>
+          `
+        }
+      };
 
+      // Función para actualizar el contenido del servicio
+      function updateServiceContent(serviceId) {
+        const service = services[serviceId];
+        document.getElementById('service-img').src = service.img;
+        document.getElementById('service-content').innerHTML = `
+          <h3>${service.title}</h3>
+          ${service.content}
+        `;
+      }
+
+      // Evento click para los enlaces de los servicios
+      document.querySelectorAll('.services-list a').forEach(a => {
+        a.addEventListener('click', function (event) {
+          event.preventDefault();
+          document.querySelectorAll('.services-list a').forEach(el => el.classList.remove('active'));
+          this.classList.add('active');
+          updateServiceContent(this.id);
+        });
+      });
+
+      // Inicializar con el primer servicio
+      updateServiceContent('service-1');
+    });
+  </script>
+</body>
 </html>
