--- a/index.html
+++ b/index.html
@@ -34,17 +34,11 @@
 <body class="index-page">
 
 
-  <div class="lines">
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
-  </div>
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Ultra Deep Tech</h1>
       </a>
@@ -426,11 +420,11 @@
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
-            <p>Corrientes 800</p>
-            <p>Ciudad Autónoma de Buenos Aires, CP1008</p>
+            <p><a href="https://maps.app.goo.gl/7zrBWkn4vfhJcYh4A" target="_blank"> Corrientes 800</p>
+            <p>Ciudad Autónoma de Buenos Aires, CP1008</p></a>
             <p>Argentina</p>
-            <p class="mt-4"><strong>Phone:</strong> <span>+54 9 11-5992-9083</span></p>
-            <p><strong>Email:</strong> <span>contact@ultradeeptech.com</span></p>
+            <p class="mt-4"><strong>Phone:</strong><a href="https://wa.link/2ebre2" target="_blank"> <span>+54 (9) 11 76455965</span></a></p>
+            <p><strong>Email:</strong> <a href="mailto: contact@ultradeeptech.com"><span>contact@ultradeeptech.com</span></a></p>
           </div>
 
         </div>
@@ -445,6 +439,11 @@
     </div>
 
   </footer>
+
+  <div id="cookie-banner" class="cookie-banner">
+    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="#">Cookie Policy</a>. You can adjust your browser settings to manage or disable cookies.</p>
+    <button id="accept-cookies">Accept</button>
+</div>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
@@ -464,6 +463,7 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/script.js"></script>
+  <script src="assets/js/cookies.js"></script>
 
 </body>
 
