--- a/about.html
+++ b/about.html
@@ -214,17 +214,13 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
               <div class="team-member">
                 <div class="member-img">
-                  <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/team/team-1.jpeg" class="img-fluid" alt="">
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+                    <a href="https://www.linkedin.com/in/avipil/"><i class="bi bi-linkedin"></i></a>                  </div>
                 </div>
                 <div class="member-info">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
+                  <h4>Avi Pilcer</h4>
+                  <span>CEO and Chief Scientist</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -232,17 +228,14 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
               <div class="team-member">
                 <div class="member-img">
-                  <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/team/team-2.jpeg" class="img-fluid" alt="">
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/karla-lemoine-2393a433/"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
+                  <h4>Karla Lemoine</h4>
+                  <span>COO and Client Satisfaction</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -252,15 +245,12 @@
                 <div class="member-img">
                   <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/azariel-yomal-0a8b18148/"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
+                  <h4>Azariel Yomal</h4>
+                  <span>Advisors</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -270,15 +260,12 @@
                 <div class="member-img">
                   <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/asquith/"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Amanda Jepson</h4>
-                  <span>Accountant</span>
+                  <h4>Michael Freedman</h4>
+                  <span>Advisor</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -359,6 +346,17 @@
   </footer>
 
 
+  <div id="cookie-banner" class="cookie-banner">
+    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="#">Cookie Policy</a>. You can adjust your browser settings to manage or disable cookies.</p>
+    <button id="accept-cookies">Accept</button>
+</div>
+
+
+
+
+
+
+
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <div id="preloader"></div>
@@ -374,6 +372,8 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/cookies.js"></script>
+
 
 </body>
 
