--- a/productsdetails.html
+++ b/productsdetails.html
@@ -15,7 +15,7 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,21 +29,18 @@
 
 </head>
 
-<body class="service-details-page">
+<body class="product-details-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-  
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Ultra Deep Tech</h1>
       </a>
-  
+
       <nav id="navmenu" class="navmenu">
         <ul>
           <li class="dropdown"><a href="about.html"><span>About Us</span>
-            <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Company History</a></li>
               <li><a href="#">Leadership Team</a></li>
@@ -53,24 +50,15 @@
           </li>
           <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#" data-service="service-1">Interpretability</a></li>
-              <li><a href="#" data-service="service-2">Anonymization</a></li>
-              <li><a href="#" data-service="service-3">Compression</a></li>
-              <li><a href="#" data-service="service-4">Benchmarking</a></li>
-              <li><a href="#" data-service="service-5">GenAI Safety</a></li>
-              <li><a href="#" data-service="service-6">Evolving Threat Management</a></li>
+              <li><a href="#" id="product-1">Interpretability</a></li>
+              <li><a href="#" id="product-2">Anonymization</a></li>
+              <li><a href="#" id="product-3">Compression</a></li>
+              <li><a href="#" id="product-4">Benchmarking</a></li>
+              <li><a href="#" id="product-5">GenAI Safety</a></li>
+              <li><a href="#" id="product-6">Evolving Threat Management</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">AI and Data Engineering Consulting</a></li>
-              <li><a href="#">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
-              <li><a href="#">Case Studies and Client Testimonials</a></li>
-              <li><a href="#">Service Packages and Pricing</a></li>
-            </ul>
-          </li>
-  
-          <li class="dropdown"><a href="services.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Current Job Openings</a></li>
               <li><a href="#">Life at Ultra Deep Tech </a></li>
@@ -79,7 +67,7 @@
               <li><a href="#">Employee Testimonials</a></li>
             </ul>
           </li>
-  
+
           <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Office Locations</a></li>
@@ -89,82 +77,72 @@
           </li>
         </ul>
       </nav>
-  
+
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-  
     </div>
   </header>
+
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/services-page-title-bg.jpg);">
+    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/ai\ consulting.png);">
       <div class="container">
-        <h1>Products & Solutions</h1>
+        <h1>Product Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Products & Solutions</li>
+            <li class="current">Product Details</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Service Details Section -->
-    <section id="service-details" class="service-details section">
+    <!-- Product Details Section -->
+    <section id="product-details" class="product-details section">
 
       <div class="container">
 
         <div class="row gy-5">
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="service-box">
-              <h4>Products & Solutions</h4>
-              <div class="services-list">
-                <a href="#" data-service="service-1"><i class="bi bi-arrow-right-circle"></i><span>Interpretability</span></a>
-                <a href="#" data-service="service-2"><i class="bi bi-arrow-right-circle"></i><span>Anonymization</span></a>
-                <a href="#" data-service="service-3"><i class="bi bi-arrow-right-circle"></i><span>Compression</span></a>
-                <a href="#" data-service="service-4"><i class="bi bi-arrow-right-circle"></i><span>Benchmarking</span></a>
-                <a href="#" data-service="service-5"><i class="bi bi-arrow-right-circle"></i><span>GenAI Safety</span></a>
-                <a href="#" data-service="service-6"><i class="bi bi-arrow-right-circle"></i><span>Evolving Threat Management</span></a>
+            <div class="product-box">
+              <h4>Products List</h4>
+              <div class="product-list">
+                <a href="#" id="product-1" class="active"><i class="bi bi-arrow-right-circle"></i> Interpretability<span></span></a>
+                <a href="#" id="product-2"><i class="bi bi-arrow-right-circle"></i> Anonymization<span></span></a>
+                <a href="#" id="product-3"><i class="bi bi-arrow-right-circle"></i> Compression<span></span></a>
+                <a href="#" id="product-4"><i class="bi bi-arrow-right-circle"></i> Benchmarking<span></span></a>
+                <a href="#" id="product-5"><i class="bi bi-arrow-right-circle"></i> GenAI Safety<span></span></a>
+                <a href="#" id="product-6"><i class="bi bi-arrow-right-circle"></i> Evolving Threat Management<span></span></a>
               </div>
-            </div><!-- End Services List -->
- 
+            </div><!-- End Products List -->
+
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
               <h4>Have a Question?</h4>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+54 9 11 5992 9083</span></p>
               <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@ultradeeptech.com">contact@ultradeeptech.com</a></p>
             </div>
-
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services/interpretability.jpg" id="service-img" alt="" class="img-fluid services-img">
-            <div id="service-content">
-              <h3>Interpretability Service</h3>
-              <p>Our interpretability services help you understand the decision-making process of your AI models. We provide insights into model behavior, ensuring transparency and trust in AI-driven outcomes.</p>
+            <img src="assets/img/products-page-title-bg.jpeg" alt="" class="img-fluid product-img" id="product-img">
+            <div id="product-content" class="service-box">
+              <h3>Interpretability</h3>
+              <p>Our interpretability solutions help you understand how your AI models make decisions, providing transparency and trust in AI-driven outcomes.</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Understand AI model decisions.</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Enhance model transparency.</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Build trust with stakeholders.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Explainable AI models.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Insight into model behavior.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Improved decision-making.</span></li>
               </ul>
             </div>
           </div>
-
         </div>
-
       </div>
-
-    </section><!-- /Service Details Section -->
-
+    </section><!-- /Product Details Section -->
   </main>
 
   <footer id="footer" class="footer">
-
-
-  <footer id="footer" class="footer">
-
     <div class="footer-top">
       <div class="container">
         <div class="row gy-4">
@@ -173,9 +151,9 @@
               <span class="sitename">Ultra Deep Tech</span>
             </a>
             <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
-              .</p>
+            </p>
             <div class="social-links d-flex mt-4">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
+              <a href=""><i class="bi bi-twitter"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
               <a href=""><i class="bi bi-instagram"></i></a>
               <a href=""><i class="bi bi-linkedin"></i></a>
@@ -183,68 +161,151 @@
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Explore</h4>
             <ul>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Products & Solutions</a></li>
+              <li><a href="#">Overview</a></li>
+              <li><a href="#">About Us</a></li>
               <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Careers</a></li>
             </ul>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
-            <h4>Products & Solution</h4>
+            <h4>Support</h4>
             <ul>
-              <li><a href="#">Interpretability</a></li>
-              <li><a href="#">Anonymization</a></li>
-              <li><a href="#">Compression</a></li>
-              <li><a href="#">Benchmarking</a></li>
-              <li><a href="#">GenAI Safety</a></li>
-              <li><a href="#">Evolving Threat Management</a></li>
+              <li><a href="#">Help Center</a></li>
+              <li><a href="#">FAQs</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Contact Us</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
-            <p>Calle falsa 123</p>
-            <p>Buenos Aires, CP 1678</p>
-            <p>Argentina</p>
-            <p class="mt-4"><strong>Phone:</strong> <span>+54 9 11-5992-9083</span></p>
-            <p><strong>Email:</strong> <span>contact@ultradeeptech.com</span></p>
+            <p>
+              Av. del Libertador 7208, Buenos Aires, Argentina<br><br>
+              <strong>Phone:</strong> +54 9 11 5992 9083<br>
+              <strong>Email:</strong> contact@ultradeeptech.com<br>
+            </p>
           </div>
-
         </div>
       </div>
     </div>
 
-    <div class="container copyright text-center">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        Designed by <a href="">Maximiliano Acri</a>
+    <div class="container">
+      <div class="copyright">
+        &copy; 2023 <strong><span>Ultra Deep Tech</span></strong>. All Rights Reserved
       </div>
     </div>
-
   </footer>
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <div id="cookie-banner" class="cookie-banner">
+    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="#">Cookie Policy</a>. You can adjust your browser settings to manage or disable cookies.</p>
+    <button id="accept-cookies">Accept</button>
+</div>
 
-  <!-- Preloader -->
+
+
+
+  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/cookies.js"></script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const products = {
+        'product-1': {
+          title: 'Interpretability',
+          content: `<p>Our interpretability solutions help you understand how your AI models make decisions, providing transparency and trust in AI-driven outcomes.</p>
+                    <ul>
+                      <li><i class="bi bi-check-circle"></i> Explainable AI models.</li>
+                      <li><i class="bi bi-check-circle"></i> Insight into model behavior.</li>
+                      <li><i class="bi bi-check-circle"></i> Improved decision-making.</li>
+                    </ul>`
+        },
+        'product-2': {
+          title: 'Anonymization',
+          content: `<p>Protect sensitive information with our anonymization solutions, ensuring data privacy and compliance with regulations.</p>
+                    <ul>
+                      <li><i class="bi bi-check-circle"></i> Secure data anonymization.</li>
+                      <li><i class="bi bi-check-circle"></i> Compliance with privacy laws.</li>
+                      <li><i class="bi bi-check-circle"></i> Maintain data utility.</li>
+                    </ul>`
+        },
+        'product-3': {
+          title: 'Compression',
+          content: `<p>Optimize data storage and transmission with our advanced compression techniques, reducing costs and enhancing efficiency.</p>
+                    <ul>
+                      <li><i class="bi bi-check-circle"></i> High-efficiency compression algorithms.</li>
+                      <li><i class="bi bi-check-circle"></i> Reduced storage costs.</li>
+                      <li><i class="bi bi-check-circle"></i> Faster data transmission.</li>
+                    </ul>`
+        },
+        'product-4': {
+          title: 'Benchmarking',
+          content: `<p>Benchmark your AI models and solutions against industry standards to ensure top performance and reliability.</p>
+                    <ul>
+                      <li><i class="bi bi-check-circle"></i> Comprehensive benchmarking tools.</li>
+                      <li><i class="bi bi-check-circle"></i> Industry-standard metrics.</li>
+                      <li><i class="bi bi-check-circle"></i> Performance optimization insights.</li>
+                    </ul>`
+        },
+        'product-5': {
+          title: 'GenAI Safety',
+          content: `<p>Ensure the safety and ethical use of generative AI technologies with our GenAI safety solutions.</p>
+                    <ul>
+                      <li><i class="bi bi-check-circle"></i> Ethical AI practices.</li>
+                      <li><i class="bi bi-check-circle"></i> Safe deployment strategies.</li>
+                      <li><i class="bi bi-check-circle"></i> Risk mitigation.</li>
+                    </ul>`
+        },
+        'product-6': {
+          title: 'Evolving Threat Management',
+          content: `<p>Stay ahead of evolving threats with our proactive threat management solutions, safeguarding your AI systems and data.</p>
+                    <ul>
+                      <li><i class="bi bi-check-circle"></i> Proactive threat detection.</li>
+                      <li><i class="bi bi-check-circle"></i> Comprehensive threat management.</li>
+                      <li><i class="bi bi-check-circle"></i> Robust security protocols.</li>
+                    </ul>`
+        },
+      };
+
+      const productLinks = document.querySelectorAll('.product-list a');
+      const productContent = document.getElementById('product-content');
+      const productImg = document.getElementById('product-img');
+
+      productLinks.forEach(link => {
+        link.addEventListener('click', function (e) {
+          e.preventDefault();
+
+          productLinks.forEach(link => link.classList.remove('active'));
+          this.classList.add('active');
+
+          const productId = this.id;
+          const product = products[productId];
+          productContent.innerHTML = `<h3>${product.title}</h3>${product.content}`;
+          productImg.src = `assets/img/${productId}.jpeg`; // Assuming each product has an image with the id as filename
+        });
+      });
+    });
+  </script>
 
 </body>
 
 </html>
+
