--- a/productsdetails.html
+++ b/productsdetails.html
@@ -85,7 +85,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/);">
+    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/ai\ consulting.png);">
       <div class="container">
         <h1>Product Details</h1>
         <nav class="breadcrumbs">
