--- a/productsdetails.html
+++ b/productsdetails.html
@@ -143,6 +143,7 @@
   </main>
 
   <footer id="footer" class="footer">
+
     <div class="footer-top">
       <div class="container">
         <div class="row gy-4">
@@ -151,54 +152,56 @@
               <span class="sitename">Ultra Deep Tech</span>
             </a>
             <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
-            </p>
+              .</p>
             <div class="social-links d-flex mt-4">
-              <a href=""><i class="bi bi-twitter"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
-            <h4>Explore</h4>
+            <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">Overview</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Careers</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="productsdetails.html">Products & Solutions</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="termsofservice.html">Terms of service</a></li>
+              <li><a href="privacypolicy.html">Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
-            <h4>Support</h4>
+            <h4>Products & Solution</h4>
             <ul>
-              <li><a href="#">Help Center</a></li>
-              <li><a href="#">FAQs</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms & Conditions</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Interpretability</a></li>
+              <li><a href="#">Anonymization</a></li>
+              <li><a href="#">Compression</a></li>
+              <li><a href="#">Benchmarking</a></li>
+              <li><a href="#">GenAI Safety</a></li>
+              <li><a href="#">Evolving Threat Management</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
-            <p>
-              Av. del Libertador 7208, Buenos Aires, Argentina<br><br>
-              <strong>Phone:</strong> +54 9 11 5992 9083<br>
-              <strong>Email:</strong> contact@ultradeeptech.com<br>
-            </p>
+            <p><a href="https://maps.app.goo.gl/7zrBWkn4vfhJcYh4A" target="_blank"> Corrientes 800</p>
+            <p>Ciudad Autónoma de Buenos Aires, CP1008</p>
+            <p>Argentina</p></a>
+            <p class="mt-4"><strong>Phone:</strong><a href="https://wa.link/2ebre2" target="_blank"> <span>+54 (9) 11 76455965</span></a></p>
+            <p><strong>Email:</strong> <a href="mailto:contact@ultradeeptech.com"><span>contact@ultradeeptech.com</span></a></p>
           </div>
+
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="copyright">
-        &copy; 2023 <strong><span>Ultra Deep Tech</span></strong>. All Rights Reserved
+    <div class="container copyright text-center">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
+      <div class="credits">
+        Designed by <a href="https://www.linkedin.com/in/maximilianoeacri/" target="_blank">Maximiliano Acri</a>
       </div>
     </div>
+
   </footer>
 
   <div id="cookie-banner" class="cookie-banner">
