--- a/service-details.html
+++ b/service-details.html
@@ -153,8 +153,9 @@
       </div>
     </section><!-- /Service Details Section -->
   </main>
-
+  
   <footer id="footer" class="footer">
+
     <div class="footer-top">
       <div class="container">
         <div class="row gy-4">
@@ -163,23 +164,21 @@
               <span class="sitename">Ultra Deep Tech</span>
             </a>
             <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
-            </p>
+              .</p>
             <div class="social-links d-flex mt-4">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Products & Solutions</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="productsdetails.html">Products & Solutions</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="termsofservice.html">Terms of service</a></li>
+              <li><a href="privacypolicy.html">Privacy policy</a></li>
             </ul>
           </div>
 
@@ -197,12 +196,13 @@
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
-            <p>Calle falsa 123</p>
-            <p>Buenos Aires, CP 1678</p>
-            <p>Argentina</p>
-            <p class="mt-4"><strong>Phone:</strong> <span>+54 9 11-5992-9083</span></p>
-            <p><strong>Email:</strong> <span>contact@ultradeeptech.com</span></p>
+            <p><a href="https://maps.app.goo.gl/7zrBWkn4vfhJcYh4A" target="_blank"> Corrientes 800</p>
+            <p>Ciudad Autónoma de Buenos Aires, CP1008</p>
+            <p>Argentina</p></a>
+            <p class="mt-4"><strong>Phone:</strong><a href="https://wa.link/2ebre2" target="_blank"> <span>+54 (9) 11 76455965</span></a></p>
+            <p><strong>Email:</strong> <a href="mailto:contact@ultradeeptech.com"><span>contact@ultradeeptech.com</span></a></p>
           </div>
+
         </div>
       </div>
     </div>
@@ -210,9 +210,10 @@
     <div class="container copyright text-center">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="">Maximiliano Acri</a>
+        Designed by <a href="https://www.linkedin.com/in/maximilianoeacri/" target="_blank">Maximiliano Acri</a>
       </div>
     </div>
+
   </footer>
 
 
