--- a/team.html
+++ b/team.html
@@ -213,44 +213,44 @@
             <a href="index.html" class="logo d-flex align-items-center">
               <span class="sitename">Ultra Deep Tech</span>
             </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
+              .</p>
             <div class="social-links d-flex mt-4">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="productsdetails.html">Products & Solutions</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="termsofservice.html">Terms of service</a></li>
+              <li><a href="privacypolicy.html">Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Products & Solution</h4>
             <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
+              <li><a href="#">Interpretability</a></li>
+              <li><a href="#">Anonymization</a></li>
+              <li><a href="#">Compression</a></li>
+              <li><a href="#">Benchmarking</a></li>
+              <li><a href="#">GenAI Safety</a></li>
+              <li><a href="#">Evolving Threat Management</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p>United States</p>
-            <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><a href="https://maps.app.goo.gl/7zrBWkn4vfhJcYh4A" target="_blank"> Corrientes 800</p>
+            <p>Ciudad Autónoma de Buenos Aires, CP1008</p>
+            <p>Argentina</p></a>
+            <p class="mt-4"><strong>Phone:</strong><a href="https://wa.link/2ebre2" target="_blank"> <span>+54 (9) 11 76455965</span></a></p>
+            <p><strong>Email:</strong> <a href="mailto:contact@ultradeeptech.com"><span>contact@ultradeeptech.com</span></a></p>
           </div>
 
         </div>
@@ -260,11 +260,7 @@
     <div class="container copyright text-center">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://Maximiliano Acri.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://Maximiliano Acri.com/">Maximiliano Acri</a>
+        Designed by <a href="https://www.linkedin.com/in/maximilianoeacri/" target="_blank">Maximiliano Acri</a>
       </div>
     </div>
 
