--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-eye" style="color: #f57813;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-eye" style="color: #2b5e96;"></i></div>
             <div>
               <h4 class="title">Interpretability</h4>
               <p class="description">Simplify and understand your AI model with techniques for bias analysis, feature generation, and simple mathematical formulas.</p>
